ImpexAST/src/test/resources/errors/quotes/quoted-modifiers1.impex
# ERROR boolean attribute modifiers cannot be surrounded by double quotes
INSERT_UPDATE Customer; uid[unique="true"];Name; 
; andi; Andy Warhol ;